# ChangeLog for app-xemacs/cc-mode
# Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/cc-mode/ChangeLog,v 1.13 2008/03/19 19:19:38 graaff Exp $

*cc-mode-1.81 (25 Oct 2014)

  25 Oct 2014; Mats Lidell <matsl@gentoo.org> +cc-mode-1.81.ebuild:
  Pre release version bump.

*cc-mode-1.79 (19 Sep 2014)

  19 Sep 2014; Mats Lidell <matsl@gentoo.org> -cc-mode-1.74.ebuild,
  +cc-mode-1.79.ebuild:
  Upstream pre release version bump

*cc-mode-1.73 (22 Oct 2013)

  22 Oct 2013; Mats Lidell <matsl@gentoo.org> +cc-mode-1.73.ebuild:
  app-xemacs/cc-mode: Upstream experimental version bump

*cc-mode-1.72 (14 Oct 2013)

  14 Oct 2013; Mats Lidell <matsl@gentoo.org> +cc-mode-1.72.ebuild:
  app-xemacs/cc-mode: Upstream experimental version bump

*cc-mode-1.71 (23 Sep 2013)

  23 Sep 2013; Mats Lidell <matsl@gentoo.org> +cc-mode-1.71.ebuild:
  app-xemacs/cc-mode: Upstream experimental version bump

*cc-mode-1.70 (19 Sep 2013)

  19 Sep 2013; Mats Lidell <matsl@gentoo.org> +cc-mode-1.70.ebuild:
  app-xemacs/cc-mode: Upstream experimental version bump

*cc-mode-1.69 (17 Jul 2013)

  17 Jul 2013; Mats Lidell <matsl@gentoo.org> +cc-mode-1.69.ebuild,
  +metadata.xml:
  Upstream experimental version bump and use EAPI=5