@@ -1,3 +1,1 @@
-DIST cc-mode-1.78-pkg.tar.gz 774649 SHA256 4421678582671113b88c570a3b8a1f6cca7171ee877e195fd40a1c74d5fff998 SHA512 288b76b9b256dd4e07bb0b5edd54d6cb32dafae2ebf7c9b360e56598979eefc7d72bbd944e4748b684e64377a8c26cfa069b39030429045fe04cec6c7afd2289 WHIRLPOOL e845f8e90e670debbaa1112f54d5a1f583994522c53e28d7ecf90411ab7ac0d6ef3278d8e40b953b2101527e8ef31d152aa6617472f5e636a05857a8ffd3bb4a
-DIST cc-mode-1.79-pkg.tar.gz 774889 SHA256 e8054f206b934488f1f006f5169ea527a83d03ddc9511c5a807881d6a3db11c0 SHA512 0ff8032609adb8ea1b31ee241ee2d707853aa65b239e68db9d4da6471cbc30d5b24b537fe92348a5f73be53e8d1d21c87133681cbf9f0c9b46a150b8b9e890f5 WHIRLPOOL 45b25f6a288f38a01da58cfe2df5ba7fe375504a07b261bd1db13c56c5e4b6c1e51750723cae4240956048cb10b5dea2c59bfc07cfaccb4b850a9b9b05f53c7f
-DIST cc-mode-1.81-pkg.tar.gz 775237 SHA256 1f3e670f9a5c92a1b3272a7fa3b379e0cdbfa1e1f95b09fd90ed73abb7c02035 SHA512 20431615aaa69e58675bb67700262478e5c2e1b7f96e8c7ed42a4fbcde9f83e14ce5a9f1ab6cdc629120b33c27dfaad55cdeb42ce7ee983953c3dabe1dc93403 WHIRLPOOL 388f16a55b1521e838bc5760c8145859b7e8694e0b7bfff9381820e19c158822e09286c5caf36e07651eaa7ebdfb5e5f44c7b868442a34fdd78492ba92821879
+DIST cc-mode-1.82-pkg.tar.gz 775313 SHA256 1c44c182f171450c83f575cdff402baa7e6e1dee80936c450eb1fd8175f884e0 SHA512 6c56c527ea2e707cf54334654d4b351aeec197ac69eeca39f8eb7526c56adb201d036f9d9ae689b001815e2f342eef666a8bff519f18ba5cc136e76e5727ea39 WHIRLPOOL 251a9ccf3cfdd17c966c8f823b4215d501a31e21731f867688248b204deeac269f371b55bea0d1bcba1fbcda5fe6e621cbcada44b6254b272e497a04ca7ac77e
