@@ -2,6 +2,12 @@
 # Copyright 2002-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/cc-mode/ChangeLog,v 1.13 2008/03/19 19:19:38 graaff Exp $
 
+*cc-mode-1.82 (03 Nov 2014)
+
+  03 Nov 2014; Mats Lidell <matsl@gentoo.org> -cc-mode-1.78.ebuild,
+  -cc-mode-1.79.ebuild, -cc-mode-1.81.ebuild, +cc-mode-1.82.ebuild:
+  Pre release version bump.
+
 *cc-mode-1.81 (25 Oct 2014)
 
   25 Oct 2014; Mats Lidell <matsl@gentoo.org> +cc-mode-1.81.ebuild:
